<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache.brooklyn</groupId>
        <artifactId>brooklyn-downstream-parent</artifactId>
        <version>0.9.0-SNAPSHOT</version> <!-- BROOKLYN_VERSION -->
    </parent>

    <groupId>io.cloudsoft.brooklyn.tosca</groupId>
    <artifactId>brooklyn-tosca-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.9.0-SNAPSHOT</version>  <!-- BROOKLYN_TOSCA_VERSION -->

    <name>Brooklyn TOSCA parent project</name>

    <modules>
        <module>a4c-brooklyn-plugin</module>
        <module>brooklyn-tosca-common</module>
        <module>brooklyn-tosca-transformer</module>
        <module>brooklyn-tosca-dist</module>
        <module>qa</module>
    </modules>

    <properties>
        <java.version>1.7</java.version>
        <alien.version>1.1.0-SM8</alien.version>
        <spring.version>4.1.4.RELEASE</spring.version>
    </properties>

    <repositories>
        <repository>
            <id>apache.snapshots</id>
            <name>Apache Snapshot Repository</name>
            <url>http://repository.apache.org/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>repo.opensource.fastconnect.org</id>
            <url>http://fastconnect.org/maven/content/repositories/opensource</url>
        </repository>
        <repository>
            <id>repo.opensource.snapshot.fastconnect.org</id>
            <url>http://fastconnect.org/maven/content/repositories/opensource-snapshot</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.brooklyn</groupId>
                <artifactId>brooklyn-all</artifactId>
                <version>${brooklyn.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.brooklyn</groupId>
                        <artifactId>brooklyn-rest-client</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <!-- a4c uses a newer version of these than brooklyn supplies -->
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.3.2</version>
            </dependency>

            <dependency>
                <!-- includes testng and useful logging for tests -->
                <groupId>org.apache.brooklyn</groupId>
                <artifactId>brooklyn-test-support</artifactId>
                <version>${brooklyn.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <!-- this gives us flexible and easy-to-use logging; just edit logback-custom.xml! -->
                <groupId>org.apache.brooklyn</groupId>
                <artifactId>brooklyn-logback-xml</artifactId>
                <version>${brooklyn.version}</version>
            </dependency>

            <dependency>
                <groupId>alien4cloud</groupId>
                <artifactId>alien4cloud-core</artifactId>
                <version>${alien.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-log4j12</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>src/test/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${surefire.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>.</directory>
                            <includes>
                                <include>brooklyn*.log</include>
                                <include>brooklyn*.log.*</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/*IntegrationTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*IntegrationTest.java</include>
                    </includes>
                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
                    <properties>
                        <property>
                            <name>listener</name>
                            <value>org.apache.brooklyn.test.support.LoggingVerboseReporter</value>
                        </property>
                    </properties>
                    <enableAssertions>true</enableAssertions>
                    <groups>${includedTestGroups}</groups>
                    <excludedGroups>${excludedTestGroups}</excludedGroups>
                    <testFailureIgnore>false</testFailureIgnore>
                    <systemPropertyVariables>
                        <verbose>-1</verbose>
                    </systemPropertyVariables>
                    <printSummary>true</printSummary>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-tests</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.13</version>
                <executions>
                    <execution>
                        <id>verify-style</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <logViolationsToConsole>true</logViolationsToConsole>
                    <checkstyleRules>
                        <module name="Checker">
                            <module name="FileTabCharacter">
                                <property name="eachLine" value="true" />
                            </module>
                            <module name="TreeWalker">
                                <module name="IllegalImport">
                                    <property name="illegalPkgs" value="com.google.api.client,org.python.google"/>
                                </module>
                            </module>
                        </module>
                    </checkstyleRules>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
